Basic set up and styles for main page

--- a/html/index.html
+++ b/html/index.html
@@ -9,12 +9,10 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
-    <body class="c__breathe">
-
-        <p>Bideford!</p>
-        <div class="pulser">
-
-        </div>
-       
+    <body class="c-breathe">
+        <div class="c-breathe__inner">
+            <div class="o-viewer-count">123</div>
+            <div class="pulser"></div>
+       </div>
     </body>
 </html>
