Convert HTML to app and integrate web socket

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,9 +10,8 @@
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body class="c-breathe">
-    <div class="c-breathe__inner">
-        <div class="o-viewer-count">123</div>
-        <div class="pulser"></div>
-    </div>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+
+        <div id="root"></div>
     </body>
 </html>
