Start of mashing pages in

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,8 +8,10 @@
         <title>Bideford</title>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+        <link rel="stylesheet" href="css/pages.css">
     </head>
-    <body class="c-breathe">
+    <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
 
         <div id="root"></div>
